# parking

./: .dockerignore  Dockerfile  compose.yml  db.sqlite3  pyproject.toml
authentication/: tests.py  urls.py
customers/: apps.py  models.py  serializers.py  urls.py  views.py
customers/migrations/: 0001_initial.py
parking/: celery.py  permissions.py  settings.py  urls.py
parkingspots/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
parkingspots/migrations/: 0001_initial.py
vehicles/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
vehicles/migrations/: 0001_initial.py  0002_rename_licence_plate_vehicle_license_plate.py
