[tool.poetry]
name = "parking"
version = "0.1.0"
description = ""
authors = ["guilherme <guilherme-lopes58@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
django = "^5.2"
djangorestframework = "^3.16.0"
django-jazzmin = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
